Replaced 'EvalAll' with 'EvalRange'.
Removed unneeded parameters on EvalJustVertex"
Added eval_order in EvalRange and rebuild_graph

Added @evaluate / @sevaluate functions
handle @nval dependencies. handle @mycol/@myrow calls during startup when no EvalJustOneVertex is yet called

free lua memory at exit

Added @getent (FR issue #451)

import mkd files



Pending for v0.8.2 release
----------------------------

+ modify :w to check current file name and save the file with the correct format.

+ Add to (or check the text in) doc file:
    @getent
    @sum(A0:@getent(@lastrow,0)) examples
    Add @dts / @now to doc
    @coltoa
    @coltoa(@mycol)
        @myrow

    =@nval(@coltoa(@mycol-1),@myrow)
    \"@fmt("%.f",@myrow)

Add GETENT in seval

Reeval of @lastrow @lastcol: check cells that uses @lastrow / @lastcol gets updated everytime it change

create @counta, and modify @count to not count strings

remove old references to freezer / freezec / center_hidden_rows: cmds.c cmds_command freeze.c tui.c tui.h

test calc_offscr_rows and calc_offscr_cols

check all cmds movement functions after new frozen mods



--
Thanks to all that helped and created PR.
Thanks to all who support and use this program.

Andrés Martinelli
andmarti1424


***********
v0.8.1
Released April 1st 2021

New features
------------
Braille support
Added latex export - issue #394
Added mappings for command mode
Work on issues #225 and #247: support mapping of ñ and other special chars
Basic ODS file import
Paste to a range of selected cells - (actually added on v0.8 - issue 438 - PR 445)
Added txtdelim | for csv files import - issue 409
Added macros to --version (show version)
Support higher versions of lua.
Handle ESC key in mappings. related to issue #492.
Added freeze to visual mode - issue #459

Changes
--------
Recognise SPACE in mappings rather than simple ' '
Visual change: Moved cmd multiplier to the left of mode
Changed default headings colors